--- a/Flask app/app/templates/home.html
+++ b/Flask app/app/templates/home.html
@@ -35,8 +35,6 @@ p.damian {
 <p class = "damian">We''ll sell your stock if loss is greater than {{i.sell}}</p>
 <p class = "damian"> You currently have ${{i.funds}} as liquid funds</p>
 </div>
-</div>
-<div class="contain">
   <div class="form-container flip">
 	<form action = "/home" form method="post">
 	<p class = "title"> To update settings change values<p>
@@ -70,12 +68,14 @@ p.damian {
 </div>
 
 {%endfor%}
-<ul>
+<div class="form-container flip">
+
 {% for num in x%}
-	<li>{{num}}</li>
+	<p class = "damian">{{num}}</p>
 	
 {% endfor%}
-</ul>
+</div>
+</div>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
 		<script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
